--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Homework 11</title>
     <!-- <link rel="stylesheet" href="./sass/index.scss" /> -->
   </head>
   <body>
@@ -21,6 +21,6 @@
       <!-- Картки зображень -->
     </div>
     <button type="button" class="load-more">Load more</button>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
