--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,14 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" id="scroll-button" >Search</button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" id="scroll-button" class="load-more">
+      Load more
+    </button>
     <script type="module" src="index.js"></script>
   </body>
 </html>
